Bug 392587 - German Translation does nothing
Summary: German Translation does nothing
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (show other bugs)
Version: 4.0
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-31 22:03 UTC by Jo
Modified: 2018-04-10 08:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jo 2018-03-31 22:03:34 UTC
Finally we can choose from... Do many languages!  :o
The problem now it's that everything remains English after switching language and restarting Krita to see changes.
Comment 1 Burkhard Lück 2018-04-01 11:46:51 UTC
krita 4.1.0-pre-alpha in neon devedition gitunstable plasma 5.12.80 frameworks 5.45 Qt 5.10.0 does not have this issue, changing the language works
Comment 2 Halla Rempt 2018-04-01 12:00:19 UTC
Yes, it's a specific problem on macos. Apparently there are two problems:

* if macos is in a certain language, for some reason, the gui doesn't change to that language. At least, according to reports, I don't have a setup like that.
* if macos is in english, you might need to set both the main as well as the fallback language to the chosen language. That works for me.
Comment 3 Jo 2018-04-03 21:04:37 UTC
I set both fallback and primary language to German, quit and restated Krita. 
Sorry to say but there's no change: krita keeps English everywhere.
Comment 4 Halla Rempt 2018-04-10 08:01:28 UTC
Git commit f460b446399cd037c446df71701e7193479d9af6 by Boudewijn Rempt.
Committed on 10/04/2018 at 08:01.
Pushed by rempt into branch 'master'.

Fix loading an override language on macOS

M  +22   -24   krita/main.cc

https://commits.kde.org/krita/f460b446399cd037c446df71701e7193479d9af6