Fix loading an override language on macOS

BUG:392587